# Whale

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md
benchmarks/: CMakeLists.txt  thread_pool_bench.cpp
data/: fetch_data.py
data/csv/: AAPL_5y.csv  AMZN_5y.csv  GOOGL_5y.csv  JNJ_5y.csv  JPM_5y.csv  META_5y.csv  MSFT_5y.csv  NVDA_5y.csv  PG_5y.csv  TSLA_5y.csv
proto/: marketdata.proto
src/app/: CMakeLists.txt  cmake_install.cmake  main.cpp
src/client/: CMakeLists.txt  MarketDataClient.cpp  MarketDataClient.hpp  cmake_install.cmake
src/server/: CMakeLists.txt  MarketDataServer.cpp  MarketDataServer.hpp  cmake_install.cmake  main.cpp
src/utilities/: queue_safe.hpp  thread_pool.hpp
test/: CMakeLists.txt  CTestTestfile.cmake  cmake_install.cmake  sample.csv  test_client.cpp  test_latency.cpp  test_server.cpp  test_thread_pool.cpp  unit_tests[1]_include.cmake
